# Voxel2Tet

./: .gitignore  readme.md  readme.txt
ExampleInput/: 16x16.dream3d  16x16.xdmf  40x40x40.dream3d  Subset.hdf5  Subset.xdmf  m155bb.hdf5  m155bb.xdmf  substructure.hdf5  substructure.xdmf
Notes/: Classes  Notes.txt  Voxel2Tet
src/: CMakeLists.txt  FindHDF5.cmake  doxygen.conf
src/Examples/: CMakeLists.txt  TestArmadillo.cpp  TestCallbackImporter.cpp  TestCube.cpp  TestImporter.cpp  TestMeshData.cpp  TestOctree.cpp  TestOptions.cpp  TestTriangleIntersectionOneShared.cpp  TestVTK.cpp  TestVoxel2Tet.cpp  Voxel2Tet.cpp
src/lib/: CMakeLists.txt  CallbackImporter.cpp  CallbackImporter.h  Exporter.cpp  Exporter.h  Importer.cpp  Importer.h  MeshComponents.cpp  MeshComponents.h  MeshData.cpp  MeshData.h  MeshGenerator3D.cpp  MeshGenerator3D.h  MeshManipulations.cpp  MeshManipulations.h  MiscFunctions.cpp  MiscFunctions.h  OFFExporter.cpp  OFFExporter.h  Options.C  Options.cpp  Options.h  PhaseEdge.cpp  PhaseEdge.h  Surface.cpp  Surface.h  TetGenCaller.cpp  TetGenCaller.h  TetGenExporter.cpp  TetGenExporter.h  VTKExporter.cpp  VTKExporter.h  VertexOctreeNode.cpp  VertexOctreeNode.h  Volume.cpp  Volume.h  Voxel2Tet.cpp  Voxel2Tet.h  hdf5DataReader.cpp  hdf5DataReader.h
src/lib/Export/: AbaqusExporter.cpp  AbaqusExporter.h  CMakeLists.txt  Exporter.cpp  Exporter.h  OFFExporter.cpp  OFFExporter.h  OOFEMExporter.cpp  OOFEMExporter.h  STLExporter.cpp  STLExporter.h  SimpleExporter.cpp  SimpleExporter.h  TetGenExporter.cpp  TetGenExporter.h  VTKExport.cpp  VTKExport.h  VTKExporter.cpp  VTKExporter.h
src/lib/General/: CMakeLists.txt  MiscFunctions.cpp  MiscFunctions.h  Options.cpp  Options.h  TimeStamp.cpp  TimeStamp.h  TriTriIntersect.cpp  TriTriIntersect.h  VertexOctreeNode.cpp  VertexOctreeNode.h
src/lib/Import/: CCBuilderDataReader.cpp  CCBuilderDataReader.h  CMakeLists.txt  CallbackImporter.cpp  CallbackImporter.h  Dream3DDataReader.cpp  Dream3DDataReader.h  Importer.cpp  Importer.h  VTKStructuredReader.cpp  VTKStructuredReader.h  hdf5DataReader.cpp  hdf5DataReader.h
src/lib/Mesh/: CMakeLists.txt  LaplaceSmoother.cpp  LaplaceSmoother.h  MeshComponents.cpp  MeshComponents.h  MeshData.cpp  MeshData.h  MeshGenerator3D.cpp  MeshGenerator3D.h  MeshManipulations.cpp  MeshManipulations.h  Smoother.cpp  Smoother.h  SpringSmoother.cpp  SpringSmoother.h  SpringSmootherPenalty.cpp  SpringSmootherPenalty.h  TetGenCaller.cpp  TetGenCaller.h
